# repeated-poker-analysis

./: .gitignore  02_research_and_implementation_plan.md  LICENSE  README.md  pyproject.toml
docs/: aiof_preflop_candidate_repeated_bridge.md  aiof_rational_lift_file_workflow.md  aiof_real_card_workflow.md  aiof_supplied_profile_file_workflow.md  assumptions_and_limitations.md  automatic_commitment_selection.md  baseline_solution_import_format.md  examples_guide.md  gui_input_design.md  known_board_real_card_hu_river_rake_adapter.md  mvp_walkthrough.md  prepared_two_street_file_workflow.md  public_observables_and_adaptation.md  public_readiness_checklist.md  publication_policy.md  scenario_format_reference.md  stage_plan_diagnostic_file_workflow.md  stage_plan_diagnostic_workflow.md  stt_pushfold_format_reference.md  three_player_candidate_repeated_workflow.md  three_player_cfr_diagnostic_workflow.md  three_player_cfr_file_workflow.md
examples/: aiof_rational_lift_file_v1.json  aiof_real_card_workflow.py  aiof_supplied_profile_file_v1.json  analysis_pipeline.py  analysis_report.py  candidate_filters.py  candidate_library.py  markdown_summary.py  nuts_chop_river.py  prepared_two_street_file_v1.json  prepared_two_street_file_v2.json  ranking.py  stage_plan_diagnostic_file_v1.json  stage_plan_diagnostic_workflow.py  stt_pushfold_2x2.json  three_player_candidate_repeated_workflow.py  three_player_cfr_diagnostic_workflow.py  three_player_cfr_file_v1.json  value_bluff_river.py
scripts/: check_mvp.py  create_scenario_template.py  edit_scenario_form.py  gui_common.py  (+19 more)
(+133 files in other folders)
